update ffm