@@ -1,24 +1,28 @@
-package io.vividcode.java11to17.ffm;
+package io.vividcode.java17to21.ffm;
 
+import static java.lang.foreign.ValueLayout.ADDRESS;
+import static java.lang.foreign.ValueLayout.JAVA_INT;
+
+import java.lang.foreign.Arena;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.Linker;
+import java.lang.foreign.MemorySegment;
 import java.lang.invoke.MethodHandle;
-import java.lang.invoke.MethodType;
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+
 
 public class CallStrlen {
 
-  public long strlen(String input) throws Throwable {
-    MethodHandle strlen = CLinker.getInstance()
+  long strlen(String input) throws Throwable {
+    MethodHandle strlen = Linker.nativeLinker()
         .downcallHandle(
-            CLinker.systemLookup().lookup("strlen").get(),
-            MethodType.methodType(int.class, MemoryAddress.class),
-            FunctionDescriptor.of(CLinker.C_INT, CLinker.C_POINTER)
+            Linker.nativeLinker().defaultLookup().find("strlen").get(),
+            FunctionDescriptor.of(JAVA_INT, ADDRESS)
         );
-    MemorySegment cStr = CLinker.toCString(input,
-        ResourceScope.newImplicitScope());
-    return (int) strlen.invokeExact(cStr.address());
+    MemorySegment segment = Arena.ofAuto().allocateUtf8String(input);
+    return (int) strlen.invokeExact(segment);
+  }
+
+  public static void main(String[] args) throws Throwable {
+    System.out.println(new CallStrlen().strlen("Hello"));
   }
 }
